clusters/labinfra/apps/hello.xuperson.org/hello-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/managed-by: flux
