clusters/labinfra/apps/hello.xuperson.org/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello-cicd-demo
    app.kubernetes.io/part-of: hello
    app.kubernetes.io/managed-by: flux
