clusters/labinfra/apps/hello.xuperson.org/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      imagePullSecrets:
      - name: gitea-registry-secret
      containers:
      - name: hello
        image: git.xuperson.org/helloroot/hello-app:main-db8ca3f # {"$imagepolicy": "hello:hello-app"}
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
