clusters/labinfra/apps/hello.xuperson.org/hello-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: hello
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.80.120"
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello-app
