clusters/labinfra/apps/hello.xuperson.org/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-cicd-demo
  namespace: hello
  labels:
    app.kubernetes.io/name: hello-cicd-demo
    app.kubernetes.io/part-of: hello
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: hello-cicd-demo
