clusters/labinfra/apps/hello.xuperson.org/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-cicd-demo
  namespace: hello
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "hello.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: "cloudflare/proxy-headers"
  labels:
    app.kubernetes.io/name: hello-cicd-demo
    app.kubernetes.io/part-of: hello
spec:
  ingressClassName: nginx
  rules:
  - host: hello.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-cicd-demo
            port:
              name: http
